[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Menu.theme" type="Theme" id=1]
[ext_resource path="res://Resources/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/HintFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sources/Tamagotchi.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Card.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/meter_discipline.png" type="Texture" id=6]
[ext_resource path="res://Assets/meter_training.png" type="Texture" id=7]
[ext_resource path="res://Assets/meter_hunger.png" type="Texture" id=8]
[ext_resource path="res://Assets/meter_happiness.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Bebas-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 10 )

[node name="Control" type="Node2D"]
position = Vector2( 0, -40 )
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 42.0
margin_right = 1680.0
margin_bottom = 1092.0
rect_pivot_offset = Vector2( -136, 24 )
color = Color( 0.227451, 0.25098, 0.278431, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackSide1" type="ColorRect" parent="Background"]
margin_left = 105.0
margin_top = 446.0
margin_right = 385.0
margin_bottom = 866.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Background/BackSide1"]
margin_left = 7.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 413.0
mouse_filter = 2
color = Color( 0.14902, 0.14902, 0.168627, 1 )

[node name="BackSide2" type="ColorRect" parent="Background"]
margin_left = 399.0
margin_top = 446.0
margin_right = 679.0
margin_bottom = 866.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Background/BackSide2"]
margin_left = 7.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 413.0
mouse_filter = 2
color = Color( 0.14902, 0.14902, 0.168627, 1 )

[node name="BackSide3" type="ColorRect" parent="Background"]
margin_left = 693.0
margin_top = 446.0
margin_right = 973.0
margin_bottom = 866.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Background/BackSide3"]
margin_left = 7.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 413.0
mouse_filter = 2
color = Color( 0.14902, 0.14902, 0.168627, 1 )

[node name="BackSide4" type="ColorRect" parent="Background"]
margin_left = 987.0
margin_top = 446.0
margin_right = 1267.0
margin_bottom = 866.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Background/BackSide4"]
margin_left = 7.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 413.0
mouse_filter = 2
color = Color( 0.14902, 0.14902, 0.168627, 1 )

[node name="BackSide5" type="ColorRect" parent="Background"]
margin_left = 1281.0
margin_top = 446.0
margin_right = 1561.0
margin_bottom = 866.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Background/BackSide5"]
margin_left = 7.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 413.0
mouse_filter = 2
color = Color( 0.14902, 0.14902, 0.168627, 1 )

[node name="PopulationLabel" type="Label" parent="."]
margin_left = 507.0
margin_top = 20.0
margin_right = 855.0
margin_bottom = 152.0
theme = ExtResource( 1 )
text = "Population"

[node name="Status" type="Label" parent="."]
margin_left = 89.0
margin_top = 940.0
margin_right = 1561.0
margin_bottom = 1072.0
theme = ExtResource( 1 )
text = "Status..."

[node name="Population" type="Label" parent="."]
margin_left = 861.0
margin_top = 20.0
margin_right = 1209.0
margin_bottom = 152.0
theme = ExtResource( 1 )
text = "0"

[node name="DayLabel" type="Label" parent="."]
margin_left = 82.0
margin_top = 20.0
margin_right = 213.0
margin_bottom = 152.0
theme = ExtResource( 1 )
text = "Day"

[node name="Day" type="Label" parent="."]
margin_left = 234.0
margin_top = 20.0
margin_right = 333.0
margin_bottom = 152.0
theme = ExtResource( 1 )
text = "0"
align = 1

[node name="PopulationLabel1" type="Label" parent="."]
margin_left = 541.0
margin_top = 197.0
margin_right = 806.0
margin_bottom = 256.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Population for next day"

[node name="PopulationLabel2" type="Label" parent="."]
margin_left = 541.0
margin_top = 286.0
margin_right = 806.0
margin_bottom = 345.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Population for next day"

[node name="PopulationLabel3" type="Label" parent="."]
margin_left = 541.0
margin_top = 375.0
margin_right = 806.0
margin_bottom = 434.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Population for next day"

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 89.0
margin_top = 159.0
margin_right = 1053.0
margin_bottom = 923.0
columns = 2
__meta__ = {
"_edit_lock_": true
}

[node name="HungerLabel" type="Label" parent="GridContainer"]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "hunger"

[node name="HungerContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_right = 439.0
margin_bottom = 81.0
custom_constants/separation = 0

[node name="Scale" type="HBoxContainer" parent="GridContainer/HungerContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/HungerContainer"]
margin_top = 40.0
margin_right = 285.0
margin_bottom = 81.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="HappinessLabel" type="Label" parent="GridContainer"]
margin_top = 104.0
margin_right = 150.0
margin_bottom = 151.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Happiness"

[node name="HappinessContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_top = 85.0
margin_right = 439.0
margin_bottom = 170.0

[node name="Scale" type="HBoxContainer" parent="GridContainer/HappinessContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/HappinessContainer"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 85.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="DisciplineLabel" type="Label" parent="GridContainer"]
margin_top = 193.0
margin_right = 150.0
margin_bottom = 240.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Discipline"

[node name="DisciplineContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_top = 174.0
margin_right = 439.0
margin_bottom = 259.0

[node name="Scale" type="HBoxContainer" parent="GridContainer/DisciplineContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/DisciplineContainer"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 85.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "-20"
align = 1
clip_text = true

[node name="TrainingLabel" type="Label" parent="."]
margin_left = 1132.5
margin_top = 72.0
margin_right = 1426.5
margin_bottom = 204.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Training"

[node name="Scale" type="HBoxContainer" parent="TrainingLabel"]
margin_left = 196.0
margin_top = -45.0
margin_right = 564.0
margin_bottom = 91.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="TrainingLabel/Scale"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 60.0
margin_top = 48.0
margin_right = 100.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 120.0
margin_top = 48.0
margin_right = 160.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 180.0
margin_top = 48.0
margin_right = 220.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 240.0
margin_top = 48.0
margin_right = 280.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="Menu" type="Button" parent="."]
visible = false
margin_left = 48.0
margin_top = 50.0
margin_right = 498.0
margin_bottom = 142.0
theme = ExtResource( 1 )
text = "MENU"

[node name="Apply" type="Button" parent="."]
margin_left = 1335.0
margin_top = 940.0
margin_right = 1613.0
margin_bottom = 1049.0
theme = ExtResource( 1 )
text = "End Shift"

[node name="NightBackground" type="ColorRect" parent="."]
visible = false
margin_left = 1052.0
margin_top = 285.0
margin_right = 1396.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( -136, 24 )
color = Color( 0.27451, 0.592157, 0.623529, 1 )

[node name="Deck" type="ColorRect" parent="."]
margin_left = 997.0
margin_top = 159.0
margin_right = 1169.0
margin_bottom = 418.0
color = Color( 0, 0, 0, 1 )

[node name="Inside" type="ColorRect" parent="Deck"]
margin_left = 5.0
margin_top = 4.0
margin_right = 167.0
margin_bottom = 254.0
color = Color( 0.0235294, 0.0431373, 0.345098, 1 )

[node name="DeckLabel" type="Label" parent="Deck"]
margin_left = -7.0
margin_top = 33.0
margin_right = 177.0
margin_bottom = 243.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Deck
of
actions"
align = 1

[node name="Hand" type="Control" parent="."]
margin_left = 33.0
margin_top = -96.0
margin_right = 73.0
margin_bottom = -56.0

[node name="Card1" parent="Hand" instance=ExtResource( 5 )]
margin_left = 72.0
margin_top = 584.0
margin_right = 72.0
margin_bottom = 584.0
rect_min_size = Vector2( 280, 420 )

[node name="Card2" parent="Hand" instance=ExtResource( 5 )]
margin_left = 366.0
margin_top = 584.0
margin_right = 646.0
margin_bottom = 1004.0
rect_min_size = Vector2( 280, 420 )

[node name="Card3" parent="Hand" instance=ExtResource( 5 )]
margin_left = 660.0
margin_top = 584.0
margin_right = 940.0
margin_bottom = 1004.0
rect_min_size = Vector2( 280, 420 )

[node name="Card4" parent="Hand" instance=ExtResource( 5 )]
margin_left = 954.0
margin_top = 584.0
margin_right = 1234.0
margin_bottom = 1004.0
rect_min_size = Vector2( 280, 420 )

[node name="Card5" parent="Hand" instance=ExtResource( 5 )]
margin_left = 1248.0
margin_top = 584.0
margin_right = 1528.0
margin_bottom = 1004.0
rect_min_size = Vector2( 280, 420 )

[node name="HungerIcon" type="Sprite" parent="."]
position = Vector2( 65, 193 )
texture = ExtResource( 8 )

[node name="HappinessIcon" type="Sprite" parent="."]
position = Vector2( 65, 282 )
texture = ExtResource( 9 )

[node name="DisciplineIcon" type="Sprite" parent="."]
position = Vector2( 65, 371 )
texture = ExtResource( 6 )

[node name="TrainingIcon" type="Sprite" parent="."]
position = Vector2( 1132.5, 89 )
texture = ExtResource( 7 )

[connection signal="pressed" from="Menu" to="." method="on_menu_pressed"]
[connection signal="pressed" from="Apply" to="." method="on_apply_pressed"]
